// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourcesContainer tests Empty Resources Rendering 1`] = `
<ResourcesContainer
  resources={
    Object {
      "scripts": Object {},
      "styles": Object {},
    }
  }
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <SideEffect(NullComponent)
      defer={true}
      encodeSpecialCharacters={true}
    >
      <NullComponent
        defer={true}
        encodeSpecialCharacters={true}
      />
    </SideEffect(NullComponent)>
  </HelmetWrapper>
</ResourcesContainer>
`;

exports[`ResourcesContainer tests Resources Rendering 1`] = `
<ResourcesContainer
  resources={
    Object {
      "scripts": Object {
        "script1": "script1-url",
        "script2": "script2-url",
      },
      "styles": Object {
        "style1": "style1-url",
        "style2": "style2-url",
      },
    }
  }
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <SideEffect(NullComponent)
      defer={true}
      encodeSpecialCharacters={true}
      link={
        Array [
          Object {
            "href": "style1-url",
            "rel": "stylesheet",
          },
          Object {
            "href": "style2-url",
            "rel": "stylesheet",
          },
        ]
      }
      script={
        Array [
          Object {
            "async": false,
            "src": "script1-url",
            "type": "text/javascript",
          },
          Object {
            "async": false,
            "src": "script2-url",
            "type": "text/javascript",
          },
        ]
      }
    >
      <NullComponent
        defer={true}
        encodeSpecialCharacters={true}
        link={
          Array [
            Object {
              "href": "style1-url",
              "rel": "stylesheet",
            },
            Object {
              "href": "style2-url",
              "rel": "stylesheet",
            },
          ]
        }
        script={
          Array [
            Object {
              "async": false,
              "src": "script1-url",
              "type": "text/javascript",
            },
            Object {
              "async": false,
              "src": "script2-url",
              "type": "text/javascript",
            },
          ]
        }
      />
    </SideEffect(NullComponent)>
  </HelmetWrapper>
</ResourcesContainer>
`;
